tests/baselines/reference/project/jsFileCompilationSameNameDTsSpecifiedWithAllowJs/amd/jsFileCompilationSameNameDTsSpecifiedWithAllowJs.errors.txt
SameNameDTsSpecifiedWithAllowJs/tsconfig.json(2,24): error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.


==== SameNameDTsSpecifiedWithAllowJs/tsconfig.json (1 errors) ====
    {
      "compilerOptions": { "allowJs": true },
                           ~~~~~~~~~
!!! error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.
      "files": [ "a.d.ts" ]
    }
==== SameNameDTsSpecifiedWithAllowJs/a.d.ts (0 errors) ====
    declare var test: number;